--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
     <body>
         <section class="showcase">
-            <div class="video-ontainer">
+            <div class="video-container">
                 <video src="video.mov" autoplay muted loop></video>
             </div>
-            <div class="contet">
+            <div class="content">
                 <h1>Shoot for the sky</h1>
                 <h3>Full screen video landing page</h3>
                 <a href="#about" class="btn">Read more</a>
